# CLayer

./: .gitignore  CMakeLists.txt
Config/: clayerrc.cfg
src/: ConfigReader.cpp  ConfigReader.h  IInputHandler.h  IModule.h  InputHandler.cpp  InputHandler.h  M_MouseControl.cpp  M_MouseControl.h  M_Remapper.cpp  M_Remapper.h  ModuleManager.cpp  ModuleManager.h  main.cpp
